updated nav bar tabs; corrected footer position; updated header spacing;

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
+body{
   margin: 0 auto;
-  padding: 2rem;
+}
+
+#root {
+  min-height: 100vh;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  background-color: rgb(179, 198, 233);
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+header{
+  background-color: rgb(124, 124, 235);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul{
+  padding-left: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+li{
+  display: inline-block;
+  list-style-type: none;
+  text-align: center;
+  padding: 0px 5px;
 }
 
-.card {
-  padding: 2em;
+footer{
+  background-color:#535bf2;
+  text-align: center;
+  padding: 1rem;
 }
 
-.read-the-docs {
-  color: #888;
+.nav-bar{
+  padding: 0px 5px;
+
 }
+
+.nav-bar-offset{
+  visibility: hidden;
+}
+
+
